Fix titlebar and css